--- a/example/Makefile
+++ b/example/Makefile
@@ -1,12 +1,13 @@
 ORG='libape-spidermonkey.c'
 TARGET=test.js
+DATA_PATH=out
 
 all: $(TARGET)
 
 include definitions.mk
 
 $(TARGET): $(ORG)
-	$(JSDOC2) -x=c,h $< > $@
+	$(JSDOC2) -n -x=c,h $<
 
 $(ORG):
 	wget https://raw.github.com/verpeteren/APE_Server/master/modules/libape-spidermonkey.c
